# ecu_dashboard

./: Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: ci.yml
src/: main.rs
