[package]
name = "ecu_dashboard"
version = "0.1.1"
edition = "2024"

[dependencies]
ecu_engine_messages = { version = "0.1.1", registry = "kellnr" }
tire_monitor_messages = { version = "0.2.0", registry = "kellnr" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
futures = "0.3.31"
bincode = "2.0.1"
